MODIFY:   change the binding for xs:nonNegativeInteger (used in the schema files)   from Integer to BigInteger (fixes bug #1475274) and provide a Digit   enum to be used in NumStroke (to avoid using BigInteger there as well).